# ChangeLog for app-text/ttf2pk2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/ttf2pk2/ChangeLog,v 1.27 2013/06/25 21:35:58 aballier Exp $

  25 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  -ttf2pk2-1.5_p20120525.ebuild:
  remove old

*ttf2pk2-1.5_p20130530 (25 Jun 2013)

  25 Jun 2013; Alexis Ballier <aballier@gentoo.org>
  +ttf2pk2-1.5_p20130530.ebuild:
  version bump

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for sh, wrt bug #449298

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for s390, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for sparc, wrt bug #449298

  21 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for arm, wrt bug #449298

  20 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for alpha, wrt bug #449298

  19 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for ia64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for ppc64, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for ppc, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for x86, wrt bug #449298

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for amd64, wrt bug #449298

  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Stable for HPPA (bug #449298).

  10 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  ttf2pk2-1.5_p20120701.ebuild:
  Keyword ~ppc ~pp64, bug #417685

  09 Aug 2012; Fabian Groffen <grobian@gentoo.org> ttf2pk2-1.5_p20120701.ebuild:
  Add Prefix keywords, bug #417685

*ttf2pk2-1.5_p20120701 (25 Jul 2012)
