@@ -1,6 +1,12 @@
 # ChangeLog for app-text/ttf2pk2
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ttf2pk2/ChangeLog,v 1.27 2013/06/25 21:35:58 aballier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/ttf2pk2/ChangeLog,v 1.28 2014/11/02 09:03:59 aballier Exp $
+
+*ttf2pk2-2.0_p20140525 (02 Nov 2014)
+
+  02 Nov 2014; Alexis Ballier <aballier@gentoo.org>
+  +ttf2pk2-2.0_p20140525.ebuild:
+  bump tot texlive 2014 version
 
   25 Jun 2013; Alexis Ballier <aballier@gentoo.org>
   -ttf2pk2-1.5_p20120525.ebuild:
